--- a/template/.gitignore
+++ b/template/.gitignore
@@ -19,6 +19,10 @@ logs
 .idea
 
 # Local env files
-.env
-.env.*
-!.env.example
+# .env
+# .env.*
+# !.env.example
+
+package-lock.json
+
+buildTools/i18n/*.xlsx
