--- a/template/package.json
+++ b/template/package.json
@@ -4,14 +4,47 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --host",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/robots": "^5.2.11",
+    "@nuxtjs/sitemap": "^7.4.2",
+    "axios": "^1.10.0",
+    "isomorphic-dompurify": "^2.25.0",
+    "nuxt-auth-utils": "^0.5.20",
     "nuxt": "^3.17.6",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^3.25.67"
+  },
+  "devDependencies": {
+    "@element-plus/nuxt": "^1.1.3",
+    "@formkit/auto-animate": "^0.8.2",
+    "@nuxt/eslint": "^1.4.1",
+    "@nuxtjs/i18n": "^9.5.6",
+    "@pinia/nuxt": "^0.11.1",
+    "@vueuse/nuxt": "^13.4.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "node-xlsx": "^0.24.0",
+    "nuxt-gtag": "^3.0.3",
+    "nuxt-vue3-google-signin": "^0.0.11",
+    "pinia-plugin-persistedstate": "^4.3.0",
+    "prettier": "^3.6.2",
+    "sass-embedded": "1.89.2",
+    "stylelint": "^16.21.0",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recess-order": "^7.1.0",
+    "stylelint-config-recommended": "^16.0.0",
+    "stylelint-config-recommended-scss": "^15.0.1",
+    "stylelint-config-recommended-vue": "^1.6.1",
+    "stylelint-config-standard": "^38.0.0",
+    "stylelint-config-standard-scss": "^15.0.1",
+    "stylelint-config-standard-vue": "^1.0.0",
+    "stylelint-order": "^7.0.0",
+    "stylelint-prettier": "^5.0.3"
   }
 }
