--- a/template/package.json
+++ b/template/package.json
@@ -3,16 +3,21 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
+    "build": "NODE_OPTIONS=--max-old-space-size=4096 nuxt build",
+    "build:prod": "NODE_OPTIONS=--max-old-space-size=4096 nuxt build --dotenv .env.production",
     "dev": "nuxt dev --host",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "build:i18n": "node buildTools/i18n/i18n.mjs",
+    "test": "pm2 start ./deploy/ecosystem.test.config.cjs",
+    "prod": "pm2 start ./deploy/ecosystem.config.cjs"
   },
   "dependencies": {
     "@nuxtjs/robots": "^5.2.11",
     "@nuxtjs/sitemap": "^7.4.2",
     "axios": "^1.10.0",
+    "h3-proxy": "^1.13.0",
     "isomorphic-dompurify": "^2.25.0",
     "nuxt-auth-utils": "^0.5.20",
     "nuxt": "^3.17.6",
